--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "syscoin-api",
-  "version": "3.0.0",
+  "name": "@syscoinorg/syscoin-nodejs",
+  "version": "3.0.0-beta",
   "description": "",
   "scripts": {
     "start": "node .",
