--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -16,7 +16,7 @@
     "swagger"
   ],
   "license": "MIT",
-  "private": true,
+  "private": false,
   "dependencies": {
     "assert": "^1.4.1",
     "chai": "^3.5.0",
