--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node .",
     "startd": "pm2 start node . $CONFIG --name 'sys-api-server'",
-    "test": "mocha **/*.spec.js -R spec",
+    "test": "mocha **/test/*.test.js --reporter spec --timeout 10000 --colors --exit",
     "isolated": "APIRUNMODE=isolated node .",
     "integrated": "APIRUNMODE=integrated node .",
     "windows-isolated": "set APIRUNMODE=isolated&& node .",
@@ -19,7 +19,8 @@
   "private": false,
   "dependencies": {
     "assert": "^1.4.1",
-    "chai": "^3.5.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "connect": "^3.6.5",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
@@ -28,7 +29,7 @@
     "js-yaml": "^3.10.0",
     "jshashes": "^1.0.7",
     "jsonwebtoken": "^7.4.3",
-    "mocha": "^3.5.3",
+    "mocha": "^5.2.0",
     "mongodb": "^2.2.33",
     "q": "^1.5.1",
     "request": "^2.83.0",
