--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@syscoin/syscoin-core": "github:syscoin/syscoin-core",
     "assert": "^1.4.1",
     "chai": "^3.5.0",
     "connect": "^3.6.5",
@@ -34,8 +35,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "serve-static": "^1.13.1",
-    "swagger-tools": "0.10.1",
-    "syscoin-core": "^1.2.8"
+    "swagger-tools": "0.10.1"
   },
   "bugs": {
     "url": "https://github.com/syscoin/syscoin-api/issues"
