--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@syscoin/syscoin-core": "github:syscoin/syscoin-core",
+    "syscoin-core": "git+https://github.com/syscoin/syscoin-core.git",
     "assert": "^1.4.1",
     "chai": "^3.5.0",
     "connect": "^3.6.5",
