--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@syscoin/syscoin-core": "^3.0.0-beta",
     "assert": "^1.4.1",
     "chai": "^3.5.0",
     "connect": "^3.6.5",
