--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -9,7 +9,9 @@
     "isolated": "APIRUNMODE=isolated node .",
     "integrated": "APIRUNMODE=integrated node .",
     "windows-isolated": "set APIRUNMODE=isolated&& node .",
-    "windows-integrated": "set APIRUNMODE=integrated&& node ."
+    "windows-integrated": "set APIRUNMODE=integrated&& node .",
+    "lint": "eslint .",
+    "lint-fix": "eslint ."
   },
   "main": "index.js",
   "keywords": [
