--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ignore-path .jshintignore *.js",
     "lint-fix": "eslint --fix . --ignore-path .jshintignore",
     "precommit": "npm run lint",
-    "prepush": "npm run lint"
+    "prepush": "npm run lint && npm run test"
   },
   "main": "index.js",
   "keywords": [
