--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -6,10 +6,8 @@
     "start": "node .",
     "startd": "pm2 start node . $CONFIG --name 'sys-api-server'",
     "test": "mocha **/test/*.test.js --reporter spec --timeout 10000 --colors --exit",
-    "isolated": "APIRUNMODE=isolated node .",
-    "integrated": "APIRUNMODE=integrated node .",
-    "windows-isolated": "set APIRUNMODE=isolated&& node .",
-    "windows-integrated": "set APIRUNMODE=integrated&& node .",
+    "isolated": "cross-env APIRUNMODE=isolated node .",
+    "integrated": "cross-env APIRUNMODE=integrated node .",
     "lint": "eslint --ignore-path .jshintignore *.js",
     "lint-fix": "eslint --fix . --ignore-path .jshintignore",
     "precommit": "npm run lint",
@@ -45,6 +43,7 @@
     "assert": "^1.4.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.0.1",
     "husky": "^0.14.3",
     "mocha": "^5.2.0",
