--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@syscoin/syscoin-core": "^3.0.0-beta",
+    "@syscoin/syscoin-core": "^3.1.0",
     "assert": "^1.4.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
