--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
-language: node_js 
-node_js: 
-  - "7.10" 
-  - "8.9"
+language: node_js
+node_js:
+  - "7.10.1"
+  - "8.11.4"
 cache:
   directories:
     - node_modules
 before_install:
-  # Update Node.js module
-  - "test ! -d node_modules || npm prune"
-  - "test ! -d node_modules || npm rebuild" 
-  - "test ! -d server/nodejs/node_modules || cd server/nodejs && npm rebuild"
-  - "test ! -d server/nodejs/node_modules || cd server/nodejs && npm prune"
-  
-script: 
+  - "test ! -d server/nodejs/node_modules || cd server/nodejs && rm -rf package-lock.json node_modules"
+
+script:
   - "cd server/nodejs && npm install"
   - "npm run lint"
   - "npm run test"
