--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -40,8 +40,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "serve-static": "^1.13.1",
-    "swagger-tools": "0.10.1",
-    "syscoin-core": "^1.2.8"
+    "swagger-tools": "0.10.1"
   },
   "bugs": {
     "url": "https://github.com/syscoin/syscoin-api/issues"
